fix: layout jump bacause of scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,7 @@ html {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-gutter: stable;
 }
 
 body {
